# mfl

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  appveyor.yml  vcpkg-configuration.json  vcpkg.json
.github/: constants.env
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci-workflow.yml  ci.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
doc/: api.md  features.md
include/mfl/: abstract_font_face.hpp  code_point.hpp  font_family.hpp  layout.hpp  units.hpp
include/mfl/detail/: operators.hpp  quantity.hpp
src/: CMakeLists.txt  concepts.hpp  dist.cpp  dist.hpp  font_library.cpp  font_library.hpp  layout.cpp  settings.cpp  settings.hpp  units.cpp  utils.hpp
src/noad/: accent.cpp  accent.hpp  big_op.cpp  big_op.hpp  fraction.cpp  fraction.hpp  gen_script.cpp  gen_script.hpp  item_kind.hpp  left_right.cpp  left_right.hpp  line.hpp  math_char.cpp  math_char.hpp  math_space.hpp  matrix.cpp  matrix.hpp  mlist.hpp  mlist_with_kind.hpp  noad.cpp  noad.hpp  overline.cpp  overline.hpp  radical.cpp  radical.hpp  script.cpp  script.hpp  underline.cpp  underline.hpp  vcenter.hpp
src/node/: box.cpp  box.hpp  glue.cpp  glue.hpp  glue_spec.hpp  glyph.hpp  hlist.cpp  hlist.hpp  kern.hpp  node.cpp  node.hpp  rule.hpp  vlist.cpp  vlist.hpp  vstack.cpp  vstack.hpp
src/parser/: accent.cpp  accent.hpp  big_op.cpp  big_op.hpp  command.cpp  command.hpp  font_group.cpp  font_group.hpp  fraction.cpp  fraction.hpp  function.cpp  function.hpp  left_right.cpp  left_right.hpp  lexer.cpp  lexer.hpp  line.cpp  line.hpp  math_char.cpp  math_char.hpp  math_space.cpp  math_space.hpp  matrix.cpp  matrix.hpp  parse.cpp  parse.hpp  parser_state.cpp  parser_state.hpp  parser_utilities.cpp  parser_utilities.hpp  radical.cpp  radical.hpp  scanner.cpp  scanner.hpp  script.cpp  script.hpp  tokens.cpp  tokens.hpp  unicode_index.cpp  unicode_index.hpp  (+2 more)
src/parser/symbols/: accents.hpp  arrows.hpp  big_operators.hpp  binary_operators.hpp  delimiters.hpp  dots.hpp  greek_alphabet.hpp  letterlike.hpp  punctuation.hpp  relational_operators.hpp
tests/approval_tests/: CMakeLists.txt  docs.cpp  main.cpp  mfl.cpp
tests/approval_tests/framework/: ApprovalTests.v.10.0.1.hpp  ApprovalTests.v.8.5.0.hpp  approval_tests.hpp  approve.cpp  approve.hpp  doctest.hpp  doctest.v.2.3.4.hpp  svg_comparator.cpp  svg_comparator.hpp
tests/approval_tests/renderer/: render_formulas.cpp  render_formulas.hpp  svg_renderer.cpp  svg_renderer.hpp
tests/fonts_for_tests/: CMakeLists.txt
tests/fonts_for_tests/include/fonts_for_tests/: font_face.hpp  freetype.hpp
tests/fonts_for_tests/src/: font_face.cpp  freetype.cpp  freetype_error.cpp  freetype_error.hpp
tests/fuzz_tests/: CMakeLists.txt  dictionary  main.cpp
tests/unit_tests/: CMakeLists.txt  dist.cpp  layout.cpp  main.cpp  units.cpp
tests/unit_tests/framework/: code_points.hpp  doctest.hpp  doctestAddTests.cmake  mock_font_face.cpp  mock_font_face.hpp  node_types_are.hpp
tests/unit_tests/noad/: accent.cpp  big_op.cpp  fraction.cpp  left_right.cpp  math_char.cpp  matrix.cpp  noad.cpp  overline.cpp  radical.cpp  script.cpp  underline.cpp
tests/unit_tests/node/: box.cpp  glue.cpp  hlist.cpp  node.cpp  vlist.cpp  vstack.cpp
tests/unit_tests/parser/: accent.cpp  big_op.cpp  font_group.cpp  fraction.cpp  function.cpp  left_right.cpp  lexer.cpp  line.cpp  math_char.cpp  math_space.cpp  matrix.cpp  parse.cpp  radical.cpp  script.cpp  tokens.cpp  unicode_index.cpp
